fix z-index

--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -85,6 +85,9 @@ body
 	height: 1042px 
 	overflow: hidden
 	background-size: cover
+	.in
+		position: relative
+		z-index: 200 
 	.home__wraplines
 		height: 550px 
 		top: 280px 
